--- a/readme
+++ b/readme
@@ -1,2 +1,2 @@
-step1] put "npm i " to install dependance in root and frontend folder
-step2] run backend and frontend  seperatly by npm run and node server run
+1. put "npm i " to install dependance in root and frontend folder
+2. run backend and frontend  seperatly by npm run and node server run
